# jumanji

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  a2c.py  commitlint.config.js  dk_usage.ipynb  env_debug.py  index.html  manifest.yaml  mjkey.txt  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements-mujoco.txt  requirements-pcb-ray.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  todo.txt  train.py  train_test.py  training_script.py  value_based_training_script.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature_request.md  implement_an_environment.md
.github/instadeep_workflows/: tests_linters.yml
.github/workflows/: docs_deploy.yml  ic_docs_deploy.yml  release.yml  tests_linters.yml  workflow.yml
.gitlab/issue_templates/: bug.md  documentation.md  feature.md
.gitlab/merge_request_templates/: generic.md
agent_training/: README_TRAINING.md  routing_a2c.sh  training_script.py
agent_training/configs/: config.yaml
api/env/: index.html
api/types/: index.html
api/wrappers/: index.html
configs/: config.yaml
configs/env/: bin_pack.yaml  constrained_bin_pack.yaml  extended_bin_pack.yaml  upgraded_bin_pack.yaml
docs/: index.md
docs/_static/: custom.css
docs/api/: env.md  types.md  wrappers.md
docs/environments/: bin_pack.md  binpack.md  bokoban.md  boxoban.md  cleaner.md  cmst.md  connect4.md  connector.md  cvrp.md  flat_pack.md  game2048.md  game_2048.md  graph_coloring 2.md  graph_coloring.md  jigsaw.md  job_shop.md  jobshop.md  knapsack.md  lbf.md  macvrp.md  maze.md  minesweeper.md  mmst.md  multi_cvrp.md  pac_man.md  pacman.md  predator_prey.md  robot_warehouse.md  routing.md  rubiks_cube.md  rware.md  search_and_rescue.md  sliding_tile_puzzle.md  snake.md  sokoban.md  solitaire.md  sudoku.md  tetris.md  tsp.md
docs/guides/: advanced_usage.md  anakin_snake.ipynb  registration.md  training.md  wrapper.md  wrappers.md
environments/bin_pack/: index.html
environments/binpack/: index.html
environments/cleaner/: index.html
environments/connect4/: index.html
environments/connector/: index.html
environments/cvrp/: index.html
environments/flat_pack/: index.html
environments/game_2048/: index.html
environments/graph_coloring/: index.html
environments/job_shop/: index.html
environments/knapsack/: index.html
environments/lbf/: index.html
environments/maze/: index.html
environments/minesweeper/: index.html
environments/mmst/: index.html
environments/multi_cvrp/: index.html
environments/pac_man/: index.html
environments/robot_warehouse/: index.html
environments/routing/: index.html
environments/rubiks_cube/: index.html
environments/search_and_rescue/: index.html
environments/sliding_tile_puzzle/: index.html
environments/snake/: index.html
environments/sokoban/: index.html
environments/sudoku/: index.html
environments/tetris/: index.html
environments/tsp/: index.html
examples/: Anakin_snake_notebook.ipynb  anakin_snake.ipynb  anakin_snake_notebook.ipynb  implement_environment.ipynb  load_checkpoints.ipynb  run_benchmark.py  run_random_agent_brax_halfcheetah.py  run_random_agent_connect4.py  run_random_agent_jax_pcb_grid.py  run_random_agent_snake.py  run_random_pcb_grid.py  snake.ipynb  training.ipynb  viewer_test.py  visualize_random_agent.py
examples/checkpoints/: CVRP-v1_training_state  Cleaner-v0_training_state  Game2048-v1_training_state  Maze-v0_training_state  Minesweeper-v0_training_state  MultiCVRP-v0_training_state  RubiksCube-partly-scrambled-v0_training_state  Snake-v1_training_state  Sudoku-very-easy-v0_training_state  TSP-v1_training_state  Tetris-v0_training_state
examples/configs/: config.yaml
guides/advanced_usage/: index.html
guides/anakin_snake/: index.html
guides/registration/: index.html
guides/training/: index.html
guides/wrappers/: index.html
ic_docs/: requirements.txt
ic_docs/source/: conf.py  index.rst
ic_experiments/danila-procedural-generators-experiments/: README.md  lsystem-tests.ipynb  makeboard_less_silly_clean.ipynb  makeboard_less_silly_experimental.ipynb  makeboard_via_lsystems_cleanup.ipynb  makeboard_via_lsystems_experimental.ipynb
ic_experiments/run_routing_on_custom_board/: dk_usage.ipynb
ic_routing_board_generation/benchmarking/: basic_benchmark.py  benchmark_data_model.py  benchmark_utils.py  empty_board_evaluation.py  marta_test.py  mw_benchmark.py  mw_benchmark_generator.py  plotting_utils.py  run_benchmark.py  run_benchmark_on_generated_board.py  run_benchmark_with_agent.py
ic_routing_board_generation/board_generator/: abstract_board.py  bfs_board.py  bfs_board_variations.py  board_generator_data_model.py  board_generator_numberlink_oj.py  board_generator_random_walk_rb.py  board_generator_v1.1.2_rb.py  board_generator_v1_1_2_rb.py  board_generator_v2_0_0_rb.py  board_generator_v3_0_0_rb.py  board_generator_v3_1_0_rb.py  board_generator_v3_2_0_rb.py  board_generator_v3_2_1_rb.py  board_generator_wfc_oj.py  board_processor.py  board_processor_2.py  dummy_boar_generator.py  grid.py  logging_config_bfs_board.py  lsystem_board.py  oj_display.py  render_rough.py  ugo_generator.py  utils.py  wfcutils.py
ic_routing_board_generation/ic_rl_training/: ic_generator.py  ic_setup_train.py  ic_train.py
ic_routing_board_generation/ic_routing/: env.py  (+5 more)
jumanji/: __init__.py  conftest.py  env.py  env_test.py  env_viewer.py  registration.py  registration_test.py  specs.py  specs_test.py  tree_utils.py  tree_utils_test.py  types.py  types_test.py  version.py  viewer.py  wrappers.py  wrappers_test.py
requirements/: requirements-dev.txt  requirements-jax.txt  requirements-mujoco.txt  requirements-pcb-ray.txt  requirements-train.txt  requirements-training.txt  requirements.txt
routing/: __init__.py  env.py  env_test.py  env_viewer.py  env_viewer_test.py  evaluation.py  evaluation_test.py  instance_generator.py  route.py
search/: search_index.json
validation/: __init__.py  conftest.py  types.py
(+1025 files in other folders)
