[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
namespace_packages = true
incremental = false
cache_dir = ""
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "gym.*",
    "pytest_mock.*",
    "numpy.*",
    "dm_env.*",
    "tree.*",
    "pytest.*",
    "IPython.*",
    "optax.*",
    "tqdm.*",
    "rlax.*",
    "neptune.*",
    "tensorboardX.*",
    "scipy.*",
    "haiku.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "jumanji-routing"
version = "0.1.1"
description = ""
authors = ["Marta <marta.wolinska16@imperial.ac.uk>"]
readme = "README.md"
packages = [{include = "ic_routing_board_generation"}]

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
chex = ">=0.1.3,<0.1.6"
dm-env = ">=1.5"
gym = ">=0.22.0"
jax = ">=0.2.26"
jaxlib = ">=0.1.74"
matplotlib = ">=3.3.4"
numpy = ">=1.19.5"
pillow = ">=9.0.0"
typing-extensions = ">=4.0.0"
dm-haiku = "0.0.9"
hydra-core = "1.3"
neptune-client = "0.16.15"
optax = ">=0.1.4"
rlax = ">=0.1.4"
tensorboardx = "2.5.1"
tqdm = ">=4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_training = 'ic_routing_board_generation.ic_rl_training.ic_train:train'
