[tool.isort]
profile = "black"
[build-system]
requires=["setuptools>=62.6"]
build-backend="setuptools.build_meta"

[project]
name="jumanji"
authors=[{name="InstaDeep Ltd", email="clement.bonnet16@gmail.com"}]
dynamic=["version", "dependencies", "optional-dependencies"]
license={file="LICENSE"}
description="A diverse suite of scalable reinforcement learning environments in JAX"
readme ="README.md"
requires-python=">=3.10"
keywords=["reinforcement-learning", "python", "jax"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools.packages.find]
include=["jumanji*"]

[tool.setuptools.package-data]
"jumanji" = ["py.typed"]

[tool.setuptools.dynamic]
version={attr="jumanji.version.__version__"}
dependencies={file="requirements/requirements.txt"}
optional-dependencies.dev={file=["requirements/requirements-dev.txt"]}
optional-dependencies.train={file=["requirements/requirements-train.txt"]}


[project.urls]
"Homepage"="https://github.com/instadeep/jumanji"
"Bug Tracker"="https://github.com/instadeep/jumanji/issues"
"Documentation"="https://instadeepai.github.io/jumanji"

[tool.mypy]
python_version = 3.10
namespace_packages = true
incremental = false
cache_dir = ""
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "gym.*",
    "pytest_mock.*",
    "numpy.*",
    "dm_env.*",
    "tree.*",
    "pytest.*",
    "IPython.*",
    "optax.*",
    "tqdm.*",
    "rlax.*",
    "neptune.*",
    "tensorboardX.*",
    "scipy.*",
    "haiku.*",
    "hydra.*",
    "omegaconf.*",
    "huggingface_hub.*",
    "requests.*",
    "pkg_resources.*",
    "PIL.*",
]
ignore_missing_imports = true
